--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.datasource.url=jdbc:mysql://localhost:3306/practice
+
+spring.datasource.username=root
+
+spring.datasource.password=Pa$$w0rd
+
+spring.jpa.hibernate.ddl-auto=update
+
+#logging.level.org.springframework.web=DEBUG
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
