--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#It was added due to the Circular cycle problem
 spring.main.allow-circular-references=true
